Fixed survey from width on small screens;

--- a/site.css
+++ b/site.css
@@ -136,6 +136,12 @@ body {
     margin: auto;
 }
 
+@media only screen and (max-width:700px) {
+    .form .container {
+        width: 100%;
+    }
+}
+
 .survey-form {
     box-shadow: 0 3px 10px rgba(0,0,0,0.2);
     background-color: rgba(15, 15, 15, 0.8);
